Add git pull to notebook setup to ensure latest code is cloned

--- a/notebooks/crop_risk_colab.ipynb
+++ b/notebooks/crop_risk_colab.ipynb
@@ -95,18 +95,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/bash: line 1: your-username: No such file or directory\n",
-      "[Errno 2] No such file or directory: 'crop-risk-predictor'\n",
-      "/content\n",
-      "\u001b[31mERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\u001b[0m\u001b[31m\n",
-      "\u001b[0m"
+      "Cloning into 'crop-risk-predictor'...\n",
+      "remote: Enumerating objects: 5, done.\u001b[K\n",
+      "remote: Counting objects: 100% (5/5), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
+      "remote: Total 5 (delta 0), reused 5 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+      "Receiving objects: 100% (5/5), done.\n",
+      "/content/crop-risk-predictor\n"
      ]
     }
    ],
    "source": [
     "!git clone https://github.com/Abhishekchoure01/crop-risk-predictor.git\n",
     "%cd crop-risk-predictor\n",
+    "!git pull origin dev\n",
     "!pip install -q -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ddca7557",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'generate_synthetic_data' from 'src.data_gen' (/content/crop-risk-predictor/src/data_gen.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipython-input-525/863913652.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_gen\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgenerate_synthetic_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCropRiskModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrisk_logic\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mexplain_risk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapp\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcreate_gradio_app\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'generate_synthetic_data' from 'src.data_gen' (/content/crop-risk-predictor/src/data_gen.py)",
+      "",
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.data_gen import generate_synthetic_data\n",
+    "from src.model import CropRiskModel\n",
+    "from src.risk_logic import explain_risk\n",
+    "from src.app import create_gradio_app\n"
    ]
   }
  ],
