Clone dev branch explicitly and verify files

--- a/notebooks/crop_risk_colab.ipynb
+++ b/notebooks/crop_risk_colab.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ddca7557",
    "metadata": {},
    "outputs": [
@@ -133,10 +133,18 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add the cloned repo to Python path\n",
+    "sys.path.insert(0, '/content/crop-risk-predictor')\n",
+    "\n",
     "from src.data_gen import generate_synthetic_data\n",
     "from src.model import CropRiskModel\n",
     "from src.risk_logic import explain_risk\n",
-    "from src.app import create_gradio_app\n"
+    "from src.app import create_gradio_app\n",
+    "\n",
+    "print(\"✓ All imports successful!\")"
    ]
   }
  ],
