Fix Gradio theme API - use valid parameters and CSS-based styling

--- a/notebooks/crop_risk_colab.ipynb
+++ b/notebooks/crop_risk_colab.ipynb
@@ -361,47 +361,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-      "* Running on public URL: https://469ba84f5e788ab665.gradio.live\n",
-      "\n",
-      "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"https://469ba84f5e788ab665.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.12/dist-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/usr/local/lib/python3.12/dist-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/usr/local/lib/python3.12/dist-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/usr/local/lib/python3.12/dist-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
+     "ename": "TypeError",
+     "evalue": "Base.set() got an unexpected keyword argument 'body_background_fill_secondary'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipython-input-4005/125148884.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     87\u001b[0m     \u001b[0msecondary_hue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"blue\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m     \u001b[0mneutral_hue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"slate\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 89\u001b[0;31m \u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     90\u001b[0m     \u001b[0mbody_background_fill\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"linear-gradient(135deg, #667eea 0%, #764ba2 100%)\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m     \u001b[0mbody_background_fill_secondary\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"rgba(255, 255, 255, 0.1)\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Base.set() got an unexpected keyword argument 'body_background_fill_secondary'"
      ]
     }
    ],
@@ -488,32 +455,21 @@
     "}\n",
     "\n",
     "# ============================================================================\n",
-    "# CUSTOM GLASS MORPHISM THEME\n",
-    "# ============================================================================\n",
-    "custom_theme = gr.themes.Soft(\n",
-    "    primary_hue=\"green\",\n",
-    "    secondary_hue=\"blue\",\n",
-    "    neutral_hue=\"slate\",\n",
-    ").set(\n",
-    "    body_background_fill=\"linear-gradient(135deg, #667eea 0%, #764ba2 100%)\",\n",
-    "    body_background_fill_secondary=\"rgba(255, 255, 255, 0.1)\",\n",
-    "    block_background_fill=\"rgba(255, 255, 255, 0.15)\",\n",
-    "    block_background_fill_secondary=\"rgba(255, 255, 255, 0.08)\",\n",
-    "    border_color_primary=\"rgba(255, 255, 255, 0.3)\",\n",
-    "    border_color_secondary=\"rgba(255, 255, 255, 0.2)\",\n",
-    "    shadow_drop=\"0 8px 32px rgba(31, 38, 135, 0.37)\",\n",
-    "    shadow_drop_lg=\"0 8px 32px rgba(31, 38, 135, 0.37)\",\n",
-    ")\n",
-    "\n",
-    "# ============================================================================\n",
     "# ENHANCED GRADIO APP WITH GLASS MORPHISM & MULTILINGUAL SUPPORT\n",
     "# ============================================================================\n",
     "def create_enhanced_app():\n",
+    "    # Create a custom theme\n",
+    "    custom_theme = gr.themes.Soft(primary_hue=\"green\", secondary_hue=\"blue\")\n",
+    "    \n",
     "    with gr.Blocks(theme=custom_theme, css=\"\"\"\n",
-    "    .glass-card {\n",
+    "    body {\n",
+    "        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);\n",
+    "        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;\n",
+    "    }\n",
+    "    .glass-card, .gradio-group {\n",
     "        backdrop-filter: blur(10px);\n",
-    "        background: rgba(255, 255, 255, 0.15);\n",
-    "        border: 1px solid rgba(255, 255, 255, 0.3);\n",
+    "        background: rgba(255, 255, 255, 0.15) !important;\n",
+    "        border: 1px solid rgba(255, 255, 255, 0.3) !important;\n",
     "        border-radius: 15px;\n",
     "        padding: 20px;\n",
     "        box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);\n",
@@ -521,10 +477,11 @@
     "    .hero-section {\n",
     "        text-align: center;\n",
     "        padding: 40px 20px;\n",
-    "        background: linear-gradient(135deg, rgba(255,255,255,0.1) 0%, rgba(255,255,255,0.05) 100%);\n",
+    "        background: linear-gradient(135deg, rgba(255,255,255,0.15) 0%, rgba(255,255,255,0.05) 100%);\n",
     "        border-radius: 20px;\n",
-    "        border: 1px solid rgba(255,255,255,0.2);\n",
+    "        border: 1px solid rgba(255,255,255,0.3);\n",
     "        margin-bottom: 30px;\n",
+    "        box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);\n",
     "    }\n",
     "    .hero-title {\n",
     "        font-size: 2.5em;\n",
@@ -534,55 +491,56 @@
     "        -webkit-background-clip: text;\n",
     "        -webkit-text-fill-color: transparent;\n",
     "        background-clip: text;\n",
+    "        color: transparent;\n",
     "    }\n",
     "    .hero-subtitle {\n",
     "        font-size: 1.1em;\n",
     "        color: rgba(255,255,255,0.9);\n",
     "        margin-bottom: 15px;\n",
-    "    }\n",
-    "    .input-card {\n",
-    "        backdrop-filter: blur(10px);\n",
-    "        background: rgba(255, 255, 255, 0.1);\n",
-    "        border: 1px solid rgba(255, 255, 255, 0.2);\n",
-    "        border-radius: 12px;\n",
-    "        padding: 15px;\n",
+    "        font-weight: 500;\n",
     "    }\n",
     "    .result-card {\n",
-    "        background: linear-gradient(135deg, rgba(102, 126, 234, 0.1) 0%, rgba(118, 75, 162, 0.1) 100%);\n",
-    "        border: 2px solid rgba(102, 126, 234, 0.3);\n",
+    "        background: linear-gradient(135deg, rgba(102, 126, 234, 0.15) 0%, rgba(118, 75, 162, 0.15) 100%);\n",
+    "        border: 2px solid rgba(102, 126, 234, 0.4) !important;\n",
     "        border-radius: 15px;\n",
     "        padding: 25px;\n",
     "        font-family: 'Courier New', monospace;\n",
+    "        backdrop-filter: blur(10px);\n",
+    "        box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);\n",
     "    }\n",
-    "    .predict-button {\n",
-    "        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);\n",
+    "    .gradio-button {\n",
+    "        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%) !important;\n",
     "        font-size: 1.1em;\n",
-    "        padding: 15px 30px;\n",
+    "        padding: 12px 30px;\n",
     "        font-weight: bold;\n",
     "        border-radius: 10px;\n",
+    "        border: none;\n",
+    "        color: white;\n",
+    "    }\n",
+    "    .gradio-button:hover {\n",
+    "        opacity: 0.9;\n",
+    "        transform: translateY(-2px);\n",
+    "        box-shadow: 0 12px 24px rgba(102, 126, 234, 0.4);\n",
     "    }\n",
     "    \"\"\") as demo:\n",
     "        \n",
-    "        # Language state\n",
-    "        current_lang = gr.State(\"English\")\n",
-    "        \n",
     "        # ====== HERO SECTION ======\n",
     "        with gr.Group(elem_classes=\"hero-section\"):\n",
-    "            gr.HTML(\"<div class='hero-title'>🌾 Crop Risk Prediction</div>\", visible=True)\n",
-    "            gr.HTML(\"<div class='hero-subtitle' id='subtitle'>AI-Powered Assessment for Indian Farmers</div>\")\n",
+    "            gr.HTML(\"<div class='hero-title'>🌾 Crop Risk Prediction</div>\")\n",
+    "            gr.HTML(\"<div class='hero-subtitle'>AI-Powered Assessment for Indian Farmers</div>\")\n",
     "            gr.HTML(\"<div style='color: rgba(255,255,255,0.85); font-size: 1em;'>Protect your harvest with intelligent weather-based risk analysis</div>\")\n",
     "        \n",
     "        # ====== CONTROLS SECTION ======\n",
-    "        with gr.Group(elem_classes=\"input-card\"):\n",
-    "            gr.Markdown(\"### ⚙️ Configuration\")\n",
+    "        with gr.Group(elem_classes=\"glass-card\"):\n",
+    "            gr.Markdown(\"### ⚙️ Configuration\", elem_classes=\"\")\n",
     "            lang_dd = gr.Dropdown(\n",
     "                choices=list(TRANSLATIONS.keys()),\n",
     "                value=\"English\",\n",
-    "                label=\"Language / भाषा / भाषा\",\n",
+    "                label=\"Language / भाषा / ভাষা\",\n",
     "                scale=1\n",
     "            )\n",
     "        \n",
-    "        with gr.Group(elem_classes=\"input-card\"):\n",
+    "        with gr.Group(elem_classes=\"glass-card\"):\n",
     "            gr.Markdown(\"### 📍 Select Your Region & Crop\")\n",
     "            with gr.Row():\n",
     "                dist_dd = gr.Dropdown(\n",
@@ -602,8 +560,7 @@
     "        predict_btn = gr.Button(\n",
     "            \"🔮 Predict Risk\",\n",
     "            variant=\"primary\",\n",
-    "            scale=2,\n",
-    "            elem_classes=\"predict-button\"\n",
+    "            scale=2\n",
     "        )\n",
     "        \n",
     "        # ====== RESULTS SECTION ======\n",
@@ -618,13 +575,12 @@
     "        gr.Markdown(\n",
     "            \"---\\n\"\n",
     "            \"🔬 **Model Performance**: R² = {:.2f} | \"\n",
-    "            \"🌐 **Supported Languages**: English, मराठी, हिन्दी | \"\n",
-    "            \"📱 **Made for Indian Farmers**\".format(r2)\n",
+    "            \"🌐 **Languages**: English • मराठी • हिन्दी | \"\n",
+    "            \"📱 **Empowering Indian Farmers**\".format(r2)\n",
     "        )\n",
     "        \n",
     "        # ====== EVENT HANDLERS ======\n",
     "        def update_on_predict(district, crop, lang):\n",
-    "            current_lang.value = lang\n",
     "            if not district or not crop:\n",
     "                return \"👈 Please select both district and crop to proceed\"\n",
     "            return predict_risk(district, crop)\n",
