Refactor translations to use language codes (en, mr, hi) with dynamic UI updates

--- a/notebooks/crop_risk_colab.ipynb
+++ b/notebooks/crop_risk_colab.ipynb
@@ -361,14 +361,51 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Base.set() got an unexpected keyword argument 'body_background_fill_secondary'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipython-input-4005/125148884.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     87\u001b[0m     \u001b[0msecondary_hue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"blue\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m     \u001b[0mneutral_hue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"slate\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 89\u001b[0;31m \u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     90\u001b[0m     \u001b[0mbody_background_fill\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"linear-gradient(135deg, #667eea 0%, #764ba2 100%)\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m     \u001b[0mbody_background_fill_secondary\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"rgba(255, 255, 255, 0.1)\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Base.set() got an unexpected keyword argument 'body_background_fill_secondary'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipython-input-4005/2254805794.py:89: DeprecationWarning: The 'theme' parameter in the Blocks constructor will be removed in Gradio 6.0. You will need to pass 'theme' to Blocks.launch() instead.\n",
+      "  with gr.Blocks(theme=custom_theme, css=\"\"\"\n",
+      "/tmp/ipython-input-4005/2254805794.py:89: DeprecationWarning: The 'css' parameter in the Blocks constructor will be removed in Gradio 6.0. You will need to pass 'css' to Blocks.launch() instead.\n",
+      "  with gr.Blocks(theme=custom_theme, css=\"\"\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
+      "* Running on public URL: https://a394cb12ad1a91d7b3.gradio.live\n",
+      "\n",
+      "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"https://a394cb12ad1a91d7b3.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.12/dist-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -416,49 +453,60 @@
     "    return \"\\n\".join(lines)\n",
     "\n",
     "# ============================================================================\n",
-    "# TRANSLATIONS\n",
+    "# MULTILINGUAL TRANSLATIONS (en, mr, hi)\n",
     "# ============================================================================\n",
     "TRANSLATIONS = {\n",
-    "    \"English\": {\n",
-    "        \"title\": \"🌾 Crop Risk Prediction\",\n",
-    "        \"subtitle\": \"AI-Powered Crop Risk Assessment for Indian Farmers\",\n",
-    "        \"hero_desc\": \"Protect your harvest with intelligent weather-based risk analysis\",\n",
-    "        \"district\": \"Select District\",\n",
-    "        \"crop\": \"Select Crop\",\n",
-    "        \"language\": \"Language\",\n",
-    "        \"predict_btn\": \"🔮 Predict Risk\",\n",
-    "        \"results\": \"Risk Assessment Results\",\n",
-    "        \"select_inputs\": \"👈 Select district, crop, and language to begin\",\n",
+    "    'en': {\n",
+    "        'title': '🌾 Crop Risk Predictor',\n",
+    "        'subtitle': 'AI-Powered Assessment for Indian Farmers',\n",
+    "        'hero_desc': 'Protect your harvest with intelligent weather-based risk analysis',\n",
+    "        'config': 'Configuration',\n",
+    "        'language': 'Language',\n",
+    "        'region': 'Select Your Region & Crop',\n",
+    "        'district': 'District',\n",
+    "        'crop': 'Crop',\n",
+    "        'predict': '🔮 Predict Risk',\n",
+    "        'results': 'Risk Assessment Results',\n",
+    "        'select_inputs': '👈 Select district, crop, and language to begin',\n",
+    "        'footer': '🔬 Model Performance: R² = {:.2f} | 🌐 Languages: English • मराठी • हिन्दी | 📱 Empowering Indian Farmers'\n",
     "    },\n",
-    "    \"मराठी\": {\n",
-    "        \"title\": \"🌾 पिकाचा जोखीम अंदाज\",\n",
-    "        \"subtitle\": \"भारतीय शेतकऱ्यांसाठी AI-संचालित पिकाचा जोखीम मुल्यांकन\",\n",
-    "        \"hero_desc\": \"हवामान-आधारित जोखीम विश्लेषणासह आपली कसद संरक्षित करा\",\n",
-    "        \"district\": \"जिल्हा निवडा\",\n",
-    "        \"crop\": \"पिक निवडा\",\n",
-    "        \"language\": \"भाषा\",\n",
-    "        \"predict_btn\": \"🔮 जोखीम अंदाज\",\n",
-    "        \"results\": \"जोखीम मूल्यांकन परिणाम\",\n",
-    "        \"select_inputs\": \"👈 सुरू करण्यासाठी जिल्हा, पिक आणि भाषा निवडा\",\n",
+    "    'mr': {\n",
+    "        'title': '🌾 पीक जोखीम भविष्यवाणी',\n",
+    "        'subtitle': 'भारतीय शेतकऱ्यांसाठी AI-संचालित मूल्यांकन',\n",
+    "        'hero_desc': 'हवामान-आधारित जोखीम विश्लेषणासह आपली पिक संरक्षित करा',\n",
+    "        'config': 'कॉन्फिगरेशन',\n",
+    "        'language': 'भाषा',\n",
+    "        'region': 'आपला प्रदेश आणि पीक निवडा',\n",
+    "        'district': 'जिल्हा',\n",
+    "        'crop': 'पीक',\n",
+    "        'predict': '🔮 धोका भविष्यवाणी',\n",
+    "        'results': 'धोका मूल्यांकन परिणाम',\n",
+    "        'select_inputs': '👈 सुरू करण्यासाठी जिल्हा, पीक आणि भाषा निवडा',\n",
+    "        'footer': '🔬 मॉडेल कार्यक्षमता: R² = {:.2f} | 🌐 भाषा: English • मराठी • हिन्दी | 📱 भारतीय शेतकऱ्यांना सशक्त करणे'\n",
     "    },\n",
-    "    \"हिन्दी\": {\n",
-    "        \"title\": \"🌾 फसल जोखिम भविष्यवाणी\",\n",
-    "        \"subtitle\": \"भारतीय किसानों के लिए AI-संचालित फसल जोखिम आकलन\",\n",
-    "        \"hero_desc\": \"मौसम-आधारित जोखिम विश्लेषण के साथ अपनी फसल की रक्षा करें\",\n",
-    "        \"district\": \"जिला चुनें\",\n",
-    "        \"crop\": \"फसल चुनें\",\n",
-    "        \"language\": \"भाषा\",\n",
-    "        \"predict_btn\": \"🔮 जोखिम पूर्वानुमान\",\n",
-    "        \"results\": \"जोखिम मूल्यांकन परिणाम\",\n",
-    "        \"select_inputs\": \"👈 शुरू करने के लिए जिला, फसल और भाषा चुनें\",\n",
-    "    },\n",
+    "    'hi': {\n",
+    "        'title': '🌾 फसल जोखिम भविष्यवाणी',\n",
+    "        'subtitle': 'भारतीय किसानों के लिए AI-संचालित आकलन',\n",
+    "        'hero_desc': 'मौसम-आधारित जोखिम विश्लेषण के साथ अपनी फसल की रक्षा करें',\n",
+    "        'config': 'कॉन्फ़िगरेशन',\n",
+    "        'language': 'भाषा',\n",
+    "        'region': 'अपना क्षेत्र और फसल चुनें',\n",
+    "        'district': 'जिला',\n",
+    "        'crop': 'फसल',\n",
+    "        'predict': '🔮 जोखिम भविष्यवाणी',\n",
+    "        'results': 'जोखिम आकलन परिणाम',\n",
+    "        'select_inputs': '👈 शुरू करने के लिए जिला, फसल और भाषा चुनें',\n",
+    "        'footer': '🔬 मॉडल प्रदर्शन: R² = {:.2f} | 🌐 भाषाएं: English • मराठी • हिन्दी | 📱 भारतीय किसानों को सशक्त बनाना'\n",
+    "    }\n",
     "}\n",
+    "\n",
+    "LANG_CODES = {'English': 'en', 'मराठी': 'mr', 'हिन्दी': 'hi'}\n",
+    "LANG_NAMES = {'en': 'English', 'mr': 'मराठी', 'hi': 'हिन्दी'}\n",
     "\n",
     "# ============================================================================\n",
     "# ENHANCED GRADIO APP WITH GLASS MORPHISM & MULTILINGUAL SUPPORT\n",
     "# ============================================================================\n",
     "def create_enhanced_app():\n",
-    "    # Create a custom theme\n",
     "    custom_theme = gr.themes.Soft(primary_hue=\"green\", secondary_hue=\"blue\")\n",
     "    \n",
     "    with gr.Blocks(theme=custom_theme, css=\"\"\"\n",
@@ -524,24 +572,27 @@
     "    }\n",
     "    \"\"\") as demo:\n",
     "        \n",
+    "        # Language state\n",
+    "        current_lang = gr.State(\"en\")\n",
+    "        \n",
     "        # ====== HERO SECTION ======\n",
     "        with gr.Group(elem_classes=\"hero-section\"):\n",
-    "            gr.HTML(\"<div class='hero-title'>🌾 Crop Risk Prediction</div>\")\n",
-    "            gr.HTML(\"<div class='hero-subtitle'>AI-Powered Assessment for Indian Farmers</div>\")\n",
-    "            gr.HTML(\"<div style='color: rgba(255,255,255,0.85); font-size: 1em;'>Protect your harvest with intelligent weather-based risk analysis</div>\")\n",
+    "            hero_title = gr.HTML(\"<div class='hero-title'>🌾 Crop Risk Predictor</div>\")\n",
+    "            hero_subtitle = gr.HTML(\"<div class='hero-subtitle'>AI-Powered Assessment for Indian Farmers</div>\")\n",
+    "            hero_desc = gr.HTML(\"<div style='color: rgba(255,255,255,0.85); font-size: 1em;'>Protect your harvest with intelligent weather-based risk analysis</div>\")\n",
     "        \n",
     "        # ====== CONTROLS SECTION ======\n",
     "        with gr.Group(elem_classes=\"glass-card\"):\n",
-    "            gr.Markdown(\"### ⚙️ Configuration\", elem_classes=\"\")\n",
+    "            lang_label = gr.Markdown(\"### ⚙️ Configuration\")\n",
     "            lang_dd = gr.Dropdown(\n",
-    "                choices=list(TRANSLATIONS.keys()),\n",
+    "                choices=['English', 'मराठी', 'हिन्दी'],\n",
     "                value=\"English\",\n",
-    "                label=\"Language / भाषा / ভাষা\",\n",
+    "                label=\"Language / भाषा / भाषा\",\n",
     "                scale=1\n",
     "            )\n",
     "        \n",
     "        with gr.Group(elem_classes=\"glass-card\"):\n",
-    "            gr.Markdown(\"### 📍 Select Your Region & Crop\")\n",
+    "            region_label = gr.Markdown(\"### 📍 Select Your Region & Crop\")\n",
     "            with gr.Row():\n",
     "                dist_dd = gr.Dropdown(\n",
     "                    DISTRICTS,\n",
@@ -565,28 +616,54 @@
     "        \n",
     "        # ====== RESULTS SECTION ======\n",
     "        with gr.Group(elem_classes=\"result-card\"):\n",
-    "            gr.Markdown(\"### 📊 Risk Assessment Results\")\n",
+    "            result_label = gr.Markdown(\"### 📊 Risk Assessment Results\")\n",
     "            result_output = gr.Markdown(\n",
     "                \"👈 Select district, crop, and language to begin\",\n",
     "                label=\"Results\"\n",
     "            )\n",
     "        \n",
     "        # ====== FOOTER ======\n",
-    "        gr.Markdown(\n",
-    "            \"---\\n\"\n",
-    "            \"🔬 **Model Performance**: R² = {:.2f} | \"\n",
+    "        footer_text = gr.Markdown(\n",
+    "            \"---\\n🔬 **Model Performance**: R² = {:.2f} | \"\n",
     "            \"🌐 **Languages**: English • मराठी • हिन्दी | \"\n",
     "            \"📱 **Empowering Indian Farmers**\".format(r2)\n",
     "        )\n",
     "        \n",
+    "        # ====== TRANSLATION UPDATE FUNCTION ======\n",
+    "        def update_ui_language(lang_name):\n",
+    "            lang_code = LANG_CODES[lang_name]\n",
+    "            trans = TRANSLATIONS[lang_code]\n",
+    "            \n",
+    "            return (\n",
+    "                gr.update(value=f\"<div class='hero-title'>{trans['title']}</div>\"),\n",
+    "                gr.update(value=f\"<div class='hero-subtitle'>{trans['subtitle']}</div>\"),\n",
+    "                gr.update(value=f\"<div style='color: rgba(255,255,255,0.85); font-size: 1em;'>{trans['hero_desc']}</div>\"),\n",
+    "                gr.update(value=f\"### ⚙️ {trans['config']}\"),\n",
+    "                gr.update(label=trans['language']),\n",
+    "                gr.update(value=f\"### 📍 {trans['region']}\"),\n",
+    "                gr.update(label=trans['district']),\n",
+    "                gr.update(label=trans['crop']),\n",
+    "                gr.update(value=trans['predict']),\n",
+    "                gr.update(value=f\"### 📊 {trans['results']}\"),\n",
+    "                gr.update(value=f\"---\\n{trans['footer']}\")\n",
+    "            )\n",
+    "        \n",
     "        # ====== EVENT HANDLERS ======\n",
-    "        def update_on_predict(district, crop, lang):\n",
+    "        def predict_and_update(district, crop, lang_name):\n",
     "            if not district or not crop:\n",
-    "                return \"👈 Please select both district and crop to proceed\"\n",
+    "                lang_code = LANG_CODES[lang_name]\n",
+    "                return TRANSLATIONS[lang_code]['select_inputs']\n",
     "            return predict_risk(district, crop)\n",
     "        \n",
+    "        lang_dd.change(\n",
+    "            fn=update_ui_language,\n",
+    "            inputs=lang_dd,\n",
+    "            outputs=[hero_title, hero_subtitle, hero_desc, lang_label, lang_dd, \n",
+    "                     region_label, dist_dd, crop_dd, predict_btn, result_label, footer_text]\n",
+    "        )\n",
+    "        \n",
     "        predict_btn.click(\n",
-    "            fn=update_on_predict,\n",
+    "            fn=predict_and_update,\n",
     "            inputs=[dist_dd, crop_dd, lang_dd],\n",
     "            outputs=result_output\n",
     "        )\n",
